# minpack-builder-windows-installer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: generate-msi-wixtoolset-v5-project.yaml  generate-wixtoolset-v5-project.yaml  llvm-flang-new-msvc-like.yaml  msi.yaml  msys2.yaml  release.yaml  source-code.yaml
bootstrapper/BootstrapperJsonConfig.DotNet/: BootstrapperJsonConfig.DotNet.csproj  MsiConfig.cs  NativeMethods.cs  README.md
bootstrapper/BootstrapperJsonConfigResource.DotNet/: BootstrapperJsonConfigResource.DotNet.csproj  NativeMethods.cs  README.md  ResourceConfig.cs
bootstrapper/bootstrapper-json-config/: CMakeLists.txt  README.md
bootstrapper/bootstrapper-json-config-resource/: CMakeLists.txt
bootstrapper/bootstrapper-json-config-resource/cmake/: BootstrapperJsonConfigResource-config.cmake.in  app.rc.in
bootstrapper/bootstrapper-json-config-resource/src/: bootstrapper-json-config-resource.c  bootstrapper-json-config-resource.h  resource.h
bootstrapper/bootstrapper-json-config/cmake/: BootstrapperJsonConfig-config.cmake.in
bootstrapper/bootstrapper-json-config/src/: bootstrapper-json-config.c  bootstrapper-json-config.h
cmake/: CompilerChoiceProperty.wxs.in  GenerateMinpackBuilderCustomizeDialogWxs.cmake  GenerateMinpackBuilderLicenses.cmake  GenerateMinpackBuilderMainFile.cmake  GenerateProjectConfigWxi.cmake  HarvestDirectory.cmake  ParseCompilerSettings.cmake  Utilities.cmake
docs/: Development.md  README.md
msi/: CMakeLists.txt
msi/cmake/: GenerateArchives.cmake  GenerateBootstrapperApplicationProjectSettings.cmake  GenerateMinpackBuilderCustomizeDialogWxs.cmake  GenerateMinpackBuilderLicenses.cmake  GenerateMinpackBuilderMainFile.cmake  GenerateMsiBat.cmake  GenerateProjectConfigWxi.cmake  HarvestDirectory.cmake  ParseCompilerSettings.cmake  Utilities.cmake
msi/localization/: WixUI_en-us.wxl
msi/templates/: CompilerChoiceProperty.wxs.in  CompilerEnvironmentVariables.wxs.in  CompilerFeature.wxs.in  CompilerInstalledCompilers.wxs.in  ListOfInstalledCompilersOnWindowsRegistry.wxs.in
templates/: ActiveCompilerChoiceProperty.wxs.in  CompilerChoiceProperty.wxs.in  CompilerEnvironmentVariables.wxs.in  CompilerInstalledCompilers.wxs.in  DefaultCompilerChoiceProperty.wxs.in  ListOfInstalledCompilersOnWindowsRegistry.wxs.in
wixtoolset-dialogs/: MinpackBuilderDialog.wxs  WixUI_pt-br.wxl  minpack-builder-dialog.wxs
